--- a/css/Devices.css
+++ b/css/Devices.css
@@ -78,6 +78,11 @@ body::-webkit-scrollbar {
     color: white;
 }
 
+.Mousebungeee{
+    height: 10.58031088082902vh;
+    width: 6.44041450777203vh;
+}
+
 .gripdsp{
     height: 70.58031088082902vh;
     width: 154.44041450777203vh;
